@@ -27,9 +27,9 @@ import org.junit.Test;
 import org.neo4j.driver.AuthTokens;
 import org.neo4j.driver.Driver;
 import org.neo4j.driver.GraphDatabase;
-import org.neo4j.driver.Record;
 import org.neo4j.driver.Result;
 import org.neo4j.driver.Session;
+import org.neo4j.driver.Record;
 
 import java.util.List;
 import java.util.Map;
@@ -41,8 +41,8 @@ import static apoc.ApocConfig.APOC_CONFIG_INITIALIZER;
 import static apoc.ApocConfig.APOC_TRIGGER_ENABLED;
 import static apoc.SystemPropertyKeys.database;
 import static apoc.trigger.TriggerHandler.TRIGGER_REFRESH;
-import static apoc.trigger.TriggerTestUtil.TIMEOUT;
-import static apoc.trigger.TriggerTestUtil.TRIGGER_DEFAULT_REFRESH;
+import static apoc.trigger.TriggerTestUtil.TIMEOUT_S;
+import static apoc.trigger.TriggerTestUtil.TRIGGER_DEFAULT_REFRESH_MS;
 import static apoc.util.TestContainerUtil.createEnterpriseDB;
 import static apoc.util.TestContainerUtil.testCall;
 import static apoc.util.TestContainerUtil.testCallEmpty;
@@ -76,7 +76,7 @@ public class TriggerEnterpriseFeaturesTest {
         // We build the project, the artifact will be placed into ./build/libs
         neo4jContainer = createEnterpriseDB(List.of(TestContainerUtil.ApocPackage.CORE), true)
                 .withEnv(APOC_TRIGGER_ENABLED, "true")
-                .withEnv(TRIGGER_REFRESH, String.valueOf(TRIGGER_DEFAULT_REFRESH))
+                .withEnv(TRIGGER_REFRESH, String.valueOf(TRIGGER_DEFAULT_REFRESH_MS))
                 .withEnv(cypherInitializer, createInitDb);
         neo4jContainer.start();
         session = neo4jContainer.getSession();
@@ -84,10 +84,8 @@ public class TriggerEnterpriseFeaturesTest {
         assertTrue(neo4jContainer.isRunning());
 
         try (Session sysSession = neo4jContainer.getDriver().session(forDatabase(SYSTEM_DATABASE_NAME))) {
-            sysSession.writeTransaction(tx -> tx.run(String.format("CREATE DATABASE %s WAIT;", FOO_DB)));
-
-            sysSession.run(String.format("CREATE USER %s SET PASSWORD '%s' SET PASSWORD CHANGE NOT REQUIRED",
-                    NO_ADMIN_USER, NO_ADMIN_PWD));
+            sysSession.run("CREATE DATABASE %s WAIT".formatted(FOO_DB)).consume();
+            sysSession.run("CREATE USER %s SET PASSWORD '%s' SET PASSWORD CHANGE NOT REQUIRED".formatted(NO_ADMIN_USER, NO_ADMIN_PWD)).consume();
         }
     }
 
@@ -103,8 +101,18 @@ public class TriggerEnterpriseFeaturesTest {
         try (Session sysSession = neo4jContainer.getDriver().session(forDatabase(SYSTEM_DATABASE_NAME))) {
             Stream.of(DEFAULT_DATABASE_NAME, FOO_DB)
                     .forEach(dbName -> sysSession.run( "call apoc.trigger.dropAll($dbName)",
-                            Map.of("dbName", dbName) )
+                            Map.of("dbName", dbName) ).consume()
                     );
+        }
+        for (int i = 0; i < 100000; ++i) {
+            try (var sysSession = neo4jContainer.getDriver().session(forDatabase(SYSTEM_DATABASE_NAME))) {
+                var result1 = sysSession.run("CALL apoc.trigger.show($db) YIELD name", Map.of("db", DEFAULT_DATABASE_NAME)).list();
+                var result2 = sysSession.run("CALL apoc.trigger.show($db) YIELD name", Map.of("db", FOO_DB)).list();
+                if (result1.size() == 0 && result2.size() == 0) {
+                    return;
+                }
+            }
+            Thread.onSpinWait();
         }
     }
     
@@ -114,7 +122,7 @@ public class TriggerEnterpriseFeaturesTest {
         final String defaultTriggerName = UUID.randomUUID().toString();
         final String fooTriggerName = UUID.randomUUID().toString();
         
-        try (Session sysSession = neo4jContainer.getDriver().session(forDatabase(SYSTEM_DATABASE_NAME))) {
+        try (Session sysSession = session(SYSTEM_DATABASE_NAME)) {
             // install and show in default db
             testCall(sysSession, "CALL apoc.trigger.install($dbName, $name, 'return 1', {})",
                     Map.of("dbName", DEFAULT_DATABASE_NAME, "name", defaultTriggerName),
@@ -143,22 +151,21 @@ public class TriggerEnterpriseFeaturesTest {
     public void testTriggerInstallInNewDatabase() {
         final String fooTriggerName = UUID.randomUUID().toString();
         
-        try (Session sysSession = neo4jContainer.getDriver().session(forDatabase(SYSTEM_DATABASE_NAME))) {
+        try (Session sysSession = session(SYSTEM_DATABASE_NAME)) {
             testCall(sysSession, "call apoc.trigger.install($dbName, $name, 'UNWIND $createdNodes AS n SET n.created = true', {})",
                     Map.of("dbName", FOO_DB, "name", fooTriggerName),
                     r -> assertEquals(fooTriggerName, r.get("name")));
         }
 
         final String queryTriggerList = "CALL apoc.trigger.list() YIELD name WHERE name = $name RETURN name";
-        try (Session fooDbSession = neo4jContainer.getDriver().session(forDatabase(FOO_DB))) {
+        try (Session fooDbSession = session(FOO_DB)) {
             assertEventually(() -> {
-                final Result res = fooDbSession.run(queryTriggerList,
-                        Map.of("name", fooTriggerName));
+                final Result res = fooDbSession.run(queryTriggerList, Map.of("name", fooTriggerName));
                 assertTrue("Should have an element", res.hasNext());
                 final Record next = res.next();
                 assertEquals(fooTriggerName, next.get("name").asString());
                 return !res.hasNext();
-            }, value -> value, TIMEOUT, TimeUnit.SECONDS);
+            }, value -> value, TIMEOUT_S, TimeUnit.SECONDS);
             
             fooDbSession.run("CREATE (:Something)");
             
@@ -173,7 +180,7 @@ public class TriggerEnterpriseFeaturesTest {
                     r -> assertFalse(r.hasNext())
             );
             
-            defaultDbSession.run("CREATE (:Something)");
+            defaultDbSession.run("CREATE (:Something)").consume();
 
             testCall(defaultDbSession, "MATCH (n:Something) RETURN n.created",
                     r -> assertNull(r.get("created")));
@@ -182,11 +189,13 @@ public class TriggerEnterpriseFeaturesTest {
 
     @Test
     public void testDeleteTriggerAfterDatabaseDeletion() {
-        try (Session sysSession = neo4jContainer.getDriver().session(forDatabase(SYSTEM_DATABASE_NAME))) {
+        try (Session sysSession = session(SYSTEM_DATABASE_NAME)) {
             final String dbToDelete = "todelete";
 
             // create database with name `todelete`
-            sysSession.writeTransaction(tx -> tx.run(String.format("CREATE DATABASE %s WAIT;", dbToDelete)));
+            sysSession.run("CREATE DATABASE %s WAIT".formatted(dbToDelete)).consume();
+            sysSession.run("show databases").list().forEach(r -> System.out.println(r));
+
 
             testDeleteTriggerAfterDropDb(dbToDelete, sysSession);
         }
@@ -194,7 +203,7 @@ public class TriggerEnterpriseFeaturesTest {
 
     @Test
     public void testDeleteTriggerAfterDatabaseDeletionCreatedViaCypherInit() {
-        try (Session sysSession = neo4jContainer.getDriver().session(forDatabase(SYSTEM_DATABASE_NAME))) {
+        try (Session sysSession = session(SYSTEM_DATABASE_NAME)) {
             // the database `initDb` is created via `apoc.initializer.*`
             testDeleteTriggerAfterDropDb(INIT_DB, sysSession);
         }
@@ -215,7 +224,7 @@ public class TriggerEnterpriseFeaturesTest {
         );
 
         // drop database
-        sysSession.writeTransaction(tx -> tx.run(String.format("DROP DATABASE %s WAIT;", dbToDelete)));
+        sysSession.run("DROP DATABASE %s WAIT".formatted(dbToDelete)).consume();
 
         // check that the trigger has been removed
         testCallEmpty(sysSession, "CALL apoc.trigger.show($dbName)",
@@ -228,14 +237,13 @@ public class TriggerEnterpriseFeaturesTest {
         final String dbToDelete = "todelete";
 
          // create a node in the Neo4j db that looks like a trigger
-        try (Session defaultSession = neo4jContainer.getDriver().session(forDatabase(DEFAULT_DATABASE_NAME))) {
-            defaultSession.writeTransaction(tx -> tx.run(String.format("CREATE (:%s {%s:'%s'})", SystemLabels.ApocTrigger, database.name(), dbToDelete)));
+        try (Session defaultSession = session(DEFAULT_DATABASE_NAME)) {
+            defaultSession.run("CREATE (:%s {%s:'%s'})".formatted(SystemLabels.ApocTrigger, database.name(), dbToDelete)).consume();
         }
 
-        try (Session sysSession = neo4jContainer.getDriver().session(forDatabase(SYSTEM_DATABASE_NAME)))
-        {
+        try (Session sysSession = session(SYSTEM_DATABASE_NAME)) {
             // create database with name `todelete`
-            sysSession.writeTransaction( tx -> tx.run( String.format( "CREATE DATABASE %s WAIT;", dbToDelete ) ) );
+            sysSession.run("CREATE DATABASE %s WAIT".formatted(dbToDelete)).consume();
 
             // install a trigger for the database
             final String defaultTriggerName = UUID.randomUUID().toString();
@@ -243,11 +251,11 @@ public class TriggerEnterpriseFeaturesTest {
                     r -> assertEquals( defaultTriggerName, r.get( "name" ) ) );
 
             // drop database
-            sysSession.writeTransaction( tx -> tx.run( String.format( "DROP DATABASE %s WAIT;", dbToDelete ) ) );
+            sysSession.run("DROP DATABASE %s WAIT".formatted(dbToDelete)).consume();
         }
 
         // check that the node in Neo4j database is still there
-        try (Session defaultSession = neo4jContainer.getDriver().session(forDatabase(DEFAULT_DATABASE_NAME))) {
+        try (Session defaultSession = session(DEFAULT_DATABASE_NAME)) {
             testCall(defaultSession, String.format("MATCH (n:%s) RETURN n.%s AS result", SystemLabels.ApocTrigger, database.name()),
                 Map.of(),
                 r -> assertEquals(dbToDelete, r.get("result"))
@@ -290,5 +298,9 @@ public class TriggerEnterpriseFeaturesTest {
                     procName);
             assertTrue("Actual error message is: " + actual, actual.contains(expected));
         }
+    }
+
+    private Session session(String db) {
+        return neo4jContainer.getDriver().session(forDatabase(db));
     }
 }
